# ai-zettelkasten

./: .aizk.env.sample  .copier-answers.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  .typos.toml  AGENTS.md  CHANGELOG  LICENSE  README.md  alembic.ini  flake.nix  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: tests.instructions.md
.github/prompts/: test.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specs/.sdd/: schema-config.yaml
.specs/changes/conversion-provenance-idempotency/: design.md  tasks.md
.specs/changes/docling-84-granite-vision/: proposal.md  tasks.md
.specs/changes/pluggable-fetch-convert/: design.md  proposal.md  tasks.md  test-inventory.md
.specs/changes/pluggable-fetch-convert-hardening/: design.md  proposal.md  tasks.md
.specs/changes/queue-backpressure/: design.md  proposal.md  tasks.md
.specs/changes/whitespace-normalization/: design.md  proposal.md  tasks.md
.specs/changes/worker-graceful-shutdown/: tasks.md
.specs/schemas/: .schema-sources.yaml  conversion-api-openapi.json
.specs/specs/conversion-api/: openapi.yaml  spec.md
.specs/specs/conversion-ui/: spec.md
.specs/specs/conversion-worker/: spec.md
.specs/specs/mlflow-llm-tracing/: spec.md
.specs/specs/pluggable-pipeline/: spec.md
.specs/specs/schema-migrations/: spec.md
.specs/specs/sqlite-replication/: spec.md
.specs/specs/testing/: spec.md
.specs/specs/url-utils/: spec.md
.specs/specs/worker-process-management/: spec.md
containers/: Containerfile  podman-compose.yaml
decision-record/: 001-content-archiving.md  002-content-parsing.md  003-database.md  003-retrievers.md  004-model-provider.md  005-chunking.md  007-index-search-retrieval.md  _template.md
docs/: Batch Handler.md  Configure Debian for NVIDIA.md  GPU setup.md  Hosting Docling.md  Litestream.md  Resources & References.md  Scrape Configuration.md
docs/decision-record/: 001-content-archiving.md  002-content-parsing.md  003-database.md  005-chunking.md  006-embedding.md  007-index-search-retrieval.md  008-orchestration.md  009-webhook-integration.md  _template.md
docs/reviews/: 2026-03-28-conversion-pipeline-architecture-review.md  2026-03-28-conversion-pipeline-remediation-plan.md
docs/superpowers/plans/: 2026-03-28-config-singleton.md  2026-03-28-production-safe-config-defaults.md  2026-03-28-schema-migration-system.md  2026-03-28-worker-module-decomposition.md
docs/superpowers/specs/: 2026-03-23-conversion-output-content-endpoints-design.md  2026-03-28-worker-module-decomposition-design.md
nix/: node-packages.nix
notebooks/: arxiv_client_demo.py  demo.py  demo_extractors.py  demo_playwright.py  docling_demo.py  docling_demo_worker.py  ingest_demo.py  karakeep_asset_pipeline.py  karakeep_cleanup.py  karakeep_client_demo.py  karakeep_conversion_pipeline.py  parse-rtf.py  parse_md.py  parse_rtf_to_md.py  reorder_experiment.py  singlefile.sh  source_cleanup.py
notebooks/claimify/: README.md  claimify_adapter_bakeoff.py  claimify_evaluation_demo.py  claimify_extraction_demo.py  pyproject.toml
notebooks/claimify/_claimify/: __init__.py  adapters.py  contextualize.py  evaluation.py  io.py  models.py  openrouter.py  pipeline.py  structuring.py  usage.py
notebooks/claimify/tests/: test_adapters.py  test_evaluation.py  test_io.py  test_pipeline.py  test_structuring.py
notebooks/docling-serve/: .npmignore  README.md  docling-compose.yaml  download-models.sh
notebooks/nemotron_parse/: latex2html.py  nemotron_parse.py  postprocessing.py
openspec/specs/mlflow-llm-tracing/: spec.md
schemas/: expected.md
schemas/after/: db_schema.sql
scripts/: rebase-plan.py  setup-playwright.sh  setup-ublock.sh  test-singlefile.sh
scripts/mine-whitespace/: README.md  sample_whitespace_patterns.py
specs/001-docling-conversion-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docling-conversion-service/checklists/: requirements.md
specs/001-docling-conversion-service/contracts/: openapi.yaml
specs/002-worker-process-management/: plan.md  spec.md  tasks.md
src/: arxiv.py
src/ai-zk/core/: database.py
src/ai-zk/extractors/: base.py  chrome.py  postlight_parser.py  singlefile.py  utils.py
src/ai-zk/utilities/: path_helpers.py
src/aizk/: __init__.py  arxiv.py  db.py  karakeep.py
src/aizk/cli/: README.md  init_chromium.py  scrape.py
src/aizk/conversion/: __init__.py  cli.py  db.py
src/aizk/core/: database.py  scrape.py
src/aizk/datamodel/: __init__.py  bookmark.py  graph.py  job.py  output.py  schema.py
src/aizk/extractors/: __init__.py  arxiv.py  base.py  chrome.py  gitingest.py  jina.py  playwright.py  postlight_parser.py  singlefile.py  utils.py
src/aizk/utilities/: __init__.py  arxiv.py  arxiv_utils.py  async_utils.py  batch_utils.py  file_helpers.py  file_utils.py  karakeep.py  limiters.py  mlflow_tracing.py  parse.py  path_helpers.py  path_utils.py  process.py  url_helpers.py  url_utils.py
src/rag_zk/core/: database.py
src/rag_zk/extractors/: base.py  chrome.py  postlight_parser.py  utils.py
tests/: AGENTS.md
tests/ai/test_tools/: test_re_search.py
tests/conversion/: __init__.py  _helpers.py  conftest.py
tests/conversion/contract/: __init__.py  test_health_api.py  test_jobs_api.py  test_jobs_idempotency.py  test_jobs_retry_cancel.py
tests/conversion/integration/: README.md  __init__.py  test_bookmark_outputs.py  test_conversion_flow.py  test_job_status_counts.py  test_jobs_actions.py  test_jobs_list.py  test_kind_gating.py  (+11 more)
tests/datamodel/: test_graph.py
tests/extractors/: test_base.py  test_postlight.py  test_utils.py
tests/utilities/: test_arxiv.py  test_async_helpers.py  test_async_utils.py  test_batch_handler.py  test_file_helpers.py  test_file_utils.py  test_limiters.py  test_mlflow_tracing.py  test_parse.py  test_process.py  test_url_helpers.py  test_url_utils.py
(+264 files in other folders)
