[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aizk"
# version = "0.beta"
description = "AI-driven zettelkasten mindmap"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "accelerate>=1.1.1",
  "aiofiles>=24.1",
  "aiohttp>=3.11.11",
  "aiolimiter>=1.2.1",
  "anthropic>=0.39",
  "asyncio>=3.4.3",
  "bertopic>=0.16.4",
  "chardet>=5.2",
  "chonkie>=1.0.8",
  "datasets<3",
  "datasketch>=1.6.5",
  "docling>2",
  "dspy>=2.6.24",
  "duckdb>=0.10.3",
  "fastapi>=0.115.5",
  "gitingest>=0.1.2",
  "httpx>=0.28.1",
  "huggingface-hub>=0.23.5",
  "jinja2>=3.1.4",
  "json-repair>=0.30.3",
  "llama-index>=0.12.1,<13",
  "llama-index-embeddings-huggingface>=0.4",
  "llama-index-embeddings-openai>=0.3.1",
  "llama-index-llms-anthropic>=0.5",
  "llama-index-llms-huggingface>=0.4.1",
  "llama-index-llms-huggingface-api>=0.3",
  "llama-index-llms-openai-like>=0.3.3",
  "llama-index-node-parser-docling>=0.3",
  "llama-index-program-openai>=0.3.1",
  "llama-index-question-gen-openai>=0.3",
  "llama-index-readers-docling>=0.3",
  "llama-index-readers-file>=0.4.1",
  "llama-index-readers-llama-parse>=0.4",
  "llama-index-retrievers-bm25>=0.5",
  "llama-index-vector-stores-duckdb>=0.3",
  "markitdown[docx,pdf,pptx,xlsx]>=0.1.2",
  "mlflow==2.18",
  "nltk>=3.9.1",
  "ocrmac>=1.0.0",
  "openai>=1.55",
  "openpyxl>=3.1.5",
  "playwright>=1.40",
  "playwright-stealth",
  "pydantic>=2.9.2",
  "pydantic-ai>=0.0.19",
  "pydantic-settings>=2.6.1",
  "pypandoc>=1.14",
  "pyppeteer-ng>=2.0.0rc1",
  "pyppeteerstealth>=0.0.5",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.0.1",
  "ragas>=0.2.8",
  "requests>=2.32.3",
  "safetensors>=0.4.5",
  "semhash>=0.3.0",
  "sentence-transformers>=3.3.1",
  "spacy>=3.7.5,<4",
  "sqlalchemy>=2",
  "sqlmodel>=0.0.22",
  "tensorboard>=2.18",
  "text-generation>=0.7",
  "tiktoken>=0.8",
  "tokenizers>=0.20.3",
  "torch>=2.2,<3",
  "torchmetrics>=1.6",
  "trace-opt>=0.1.3.8",
  "transformers>=4.46.3",
  "turftopic>=0.10",
  "uvicorn>=0.32.1",
  "uvloop>=0.21.0",
  "validators>=0.35.0",
  "vicinity>=0.4.1",
  "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
  "pandas-stubs~=2.1",
  "types-openpyxl~=3.1",
  "types-requests~=2.31",
  "boto3-stubs~=1.37",
  "types-urllib3~=1.26",
  "types-tqdm~=4.67",
  "coverage~=7.6",
  "pytest~=8.3",
  "pytest-cov>=6.1.1",
  "pytest-dependency~=0.6",
  "ipykernel~=6.29",
  "ipywidgets~=8.1",
  "nest-asyncio>=1.6",
  "notebook>=7.2.2",
]
test = [
  "coverage>=7.6.9",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6",
  "pytest-responses>=0.5.1",
  "responses>=0.25.3",
]
ds = [
  "numpy>=1.26",
  "pandas>=2.2",
]
plot = [
  "cmcrameri>=1.9",
  "matplotlib>=3.8",
  "mizani>=0.13",
  "plotly>=5.24",
  "plotnine>=0.14",
  "seaborn>=0.13",
]

[tool.hatch.version]
path = "./src/VERSION"
pattern = "^(?P<version>.+?)(\n)"

[tool.hatch.build]
only-include = [ "./src/VERSION", "src/aizk", "tests" ]
skip-excluded-dirs = true
sources = [ "src" ]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = [ "src/aizk" ]
macos-max-compat = true

[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".git",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = "src"
testpaths = [ "tests" ]
# log_cli = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv]
package = true
default-groups = [ "dev", "ds", "test" ]
python-preference = "managed"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
ai-zk = { path = "src/ai-zk", editable = true }
