[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[project]
name = "aizk"
description = "AI-driven zettelkasten mindmap"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "accelerate>=1.1.1",
    "aiofiles>=24.1",
    "aiohttp>=3.11.11",
    "aiolimiter>=1.2.1",
    "alembic>=1.17.2",
    "asyncio>=3.4.3",
    "boto3>=1.42.9",
    "chardet>=5.2",
    "chonkie[hub,neural,openai,semantic,st,viz]>=1.4",
    "datasets<3",
    "docling[easyocr,vlm]>=2.83",
    "dspy>=2.6.24",
    "duckdb>=0.10.3",
    "fastapi>=0.115.5",
    "gitingest>=0.1.4",
    "httpx>=0.28.1",
    "huggingface-hub>=0.23.5",
    "jinja2>=3.1.4",
    "json-repair>=0.30.3",
    "karakeep-client>=0.3.0",
    "markitdown[pdf]>=0.1.3",
    "mlflow>=3.9",
    "nltk>=3.9.1",
    "numpy>=2",
    "openai>=1.55",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "pydantic>=2.9.2",
    "pydantic-ai-slim[openai,anthropic,huggingface,openrouter,cli,mcp,fastmcp,evals,ag-ui,retries,temporal,ui]",
    "pydantic-settings>2.10",
    "pypdfium2>=5.6.0",
    "pypandoc>=1.14",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "rensa>=0.2.5",
    "requests>=2.32.3",
    "semhash>=0.3.0",
    "sentence-transformers>=3.3.1",
    "setproctitle>=1.3.7",
    "spacy>=3.7.5,<4",
    "sqlalchemy>=2",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8",
    "torch>=2.7,<3",
    "transformers>=4.46.3",
    "urllib3>=2.6.3",
    "uvicorn>=0.32.1",
    "uvloop>=0.21.0",
    "validators>=0.35.0",
    "vicinity>=0.4.1",
    "xxhash>=3.5.0",
    "zstandard>=0.23.0",
]

[project.scripts]
aizk-conversion = "aizk.conversion.cli:main"

[project.optional-dependencies]
# for user-facing features;
# installable with `uv add aizk[feature]`
eval = [
    "jiwer>=4.0.0",
    "ragas>=0.2.15",
    "rapidfuzz>=3.14.3",
    "rouge-score>=0.1.2",
    "sequence-align>=0.3.0",
]
nemotron-parse = [
  "albumentations>=2.0.8",
  "open-clip-torch>=3.2.0",
  "opencv-python>=4.10.0.84",
  "opencv-python-headless>=4.11.0.86",
  # "pillow>=10.4.0",
  "timm>=1.0.22",
  "torchmetrics>=1.8.2",
]

[dependency-groups]
# for local development groups;
# not exposed to user-facing install api
# e.g., cannot do `uv add aizk[dev]`
dev = [
    "uv-ship>=0.3.0",
    "gravis>=0.1.0",
    "lingua>=4.15.0",
    "pandas>=2.2",
    "playwright>=1.57.0",
    "trace-opt>=0.1.3.8",
    # "turftopic>=0.17.2",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]
lint = [
    "complexipy>=3.0.0",
    "ruff>=0.12.0",
]
test = [
    "botocore>=1.42.17",
    "coverage>=7.6.9",
    "pip-audit>=2.10.0",
    "pyleak>=0.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-dependency~=0.6",
    "pytest-isolate>=0.0.13",
    "pytest-responses>=0.5.1",
    "pytest-subprocess>=1.5.3",
    "pytest-xdist>=3.8.0",
    "responses>=0.25.3",
]
type = [
    "pandas-stubs~=2.1",
    "types-openpyxl~=3.1",
    "types-requests~=2.31",
    "boto3-stubs~=1.37",
    "types-urllib3~=1.26",
    "types-tqdm~=4.67",
]
ipynb = [
    "ipykernel~=6.29",
    "ipywidgets~=8.1",
    "nest-asyncio>=1.6",
    "notebook>=7.2.2",
]
plot = [
    "cmcrameri>=1.9",
    "matplotlib>=3.8",
    "mizani>=0.13",
    "plotly>=5.24",
    "plotnine>=0.14",
    "seaborn>=0.13",
    # "topic-wizard>=1.1.4",
]

[tool.uv]
package = true
default-groups = [ "dev", "ipynb", "lint", "test", "type" ]
python-preference = "managed"
exclude-newer = "3 days"

[tool.uv.build-backend]
module-name = "aizk"
module-root = "src/"

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
aizk = { path = "src/aizk", editable = true }
karakeep-client = { git = "https://github.com/ahgraber/karakeep_client.git" }

torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


# [tool.ty]

[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --ignore-glob=.env*
    --ignore-glob=.envrc
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".env.*",
  ".envrc",
  ".git",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = "src"
testpaths = [ "tests" ]
# log_cli = true
markers = [
    "isolate: run test in isolated subprocess (requires pytest-isolate)",
    "integration_lifecycle: worker lifecycle integration tests with real processes",
]

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv-ship]
release-branch = "main"
tag-prefix = "v"
allow-dirty = false
changelog-path = "CHANGELOG"
changelog-template = "- {message} [{hash}]"
commit-message = "bump: {old_ver} → {new_ver}"
